Implement Layout styles

--- a/src/template.html
+++ b/src/template.html
@@ -5,6 +5,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="x-ua-compatible" content="ie=edge" />
+  <meta name="AnywhereFlex"
+    content="AnywhereFlex is a CSS utility library featuring various helpers such as a grid system, flexbox, spacing, elevation and more.">
 
   <title>AnywhereFlex</title>
 </head>
