Implemented site mobile menu button

--- a/src/template.html
+++ b/src/template.html
@@ -8,6 +8,8 @@
   <meta name="AnywhereFlex"
     content="AnywhereFlex is a CSS utility library featuring various helpers such as a grid system, flexbox, spacing, elevation and more.">
 
+  <script src="https://code.iconify.design/2/2.1.0/iconify.min.js"></script>
+
   <title>AnywhereFlex</title>
 </head>
 
@@ -23,6 +25,7 @@
       </div>
       <include src="includes/footer.html" />
     </div>
+    <div id="layout-mask" class="layout-mask"></div>
   </main>
 </body>
 
